static/css/Default.css
/* ... */
.titleOverlay {
    padding: 5px 5px 5px 5px;
    border-radius: 15px;
    width:100%;
    background-color: rgba(0, 0, 0, .50);
    text-align: left;
    color:white;
}

.comments-box {
    overflow-y: auto;
    max-height: 800px;
}

.comment {
  padding:8px 5px 8px 10px;
  margin-bottom:10px;
}

.callout {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #eee;
    border-radius: 3px;
    color: white;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
}

.callout h4 {
    margin-top: 0;
    margin-bottom: 5px;
}

.callout p:last-child {
    margin-bottom: 0;
}

.callout code {
    border-radius: 3px;
}

.callout-primary{
    background-color:#428bca;
}
.callout-success{
    background-color:#5cb85c;
}
.callout-danger{
    background-color:#ff253a;
}

.chat-Standard{
    background: #667db6;
    background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}

.chat-DeepSpace{
    background: #000000;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}

.chat-BloodRed {
    background: #f85032;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #e73827, #f85032);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #e73827, #f85032); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}

.chat-Terminal {
    background-color: black;
    background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}

@media screen and (max-width: 1024px) {

    .stream{
        margin: 10px;
    }


    .recordDot {
        width: 12px;
        height: 12px;
    }

}

@media screen and (max-width : 640px) {
    .login-box {
        width: 100%;
        height: 100%;
    }

    .stream{
        margin-top: 10px;
        margin-bottom: 10px;
        margin-left: 0px;
        margin-right: 0px;
    }

    .streamList {

    }

    .streamcard {
        margin:0 auto;
        width:100%;
    }

    .streamercard-item {
        width: 100%;
        height:450px;
    }

    .streamcard-item {
        width: 100%;
        height: 450px;
    }

    .topiccard-item {
        width:100%;
        height:400px;
    }

    .video-buttons-lg {
        display:none;
    }

    .video-buttons-mobile {
        padding-top:15px;
        display:block;
        width:100%;
        margin: 0 auto;
        align-items:center;
        display:flex;
    }

    .video-buttons-mobile div {
        float: left;
    }

    .no-stream-jumbo {
        display:none;
    }
}

/* Firefox old*/
@-moz-keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}

@-webkit-keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}
/* IE */
@-ms-keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}
/* Opera and prob css3 final iteration */
@keyframes blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:0;
    }
    100% {
        opacity:1;
    }
}
.blink-image {
    -moz-animation: blink normal 1s infinite ease-in-out; /* Firefox */
    -webkit-animation: blink normal 1s infinite ease-in-out; /* Webkit */
    -ms-animation: blink normal 1s infinite ease-in-out; /* IE */
    animation: blink normal 1s infinite ease-in-out; /* Opera and prob css3 final iteration */
}

.quarter-circle-top-left{
    width: 50px;
    height: 50px;
    background: #1e3c72;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    border-radius: 0 0 100px 0;
    -moz-border-radius: 0 0 100px 0;
    -webkit-border-radius: 0 0 100px 0;
}

.quarter-circle-top-right{
    width: 50px;
    height: 50px;
    background: #ED213A;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to top, #93291E, #ED213A);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to top, #93291E, #ED213A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    border-radius: 0 0 0 100px;
    -moz-border-radius: 0 0 0 100px;
    -webkit-border-radius: 0 0 0 100px;
}

.streamcard-overlay {
  position:absolute;
  top: -1px;
  right: 0;
  left: -1px;
  bottom: 0;
}

.stream-image-overlay-text{
    margin-left:10px;
    margin-top:10px;
    text-shadow: 1px 1px 2px #000000;
    color:white;
}

.streamcard-overlay-right {
  position:absolute;
  top: 0;
  right: 0;
}

.stream-image-overylay-text{
    margin-left:20px;
    margin-top:10px;
    text-shadow: 1px 1px 2px #000000;
    color:white;
}

.blur {
  /* Add the blur effect */
  filter: blur(5px);
  -webkit-filter: blur(5px);

  /* Full height */
  height: 100%;
}


.slide-in-left {
	-webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}
/* ... */

